Add graph expansion and LevelWarmUp

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -36,6 +36,14 @@
             <groupId>pt.up.fe.iart.core</groupId>
             <artifactId>core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
